# Lumo

./: .env.example  .gitignore  README.md  lumo.md  pyproject.toml
eval/: README.md  catalog.json  references.json  run_suite.py  run_suite_claude.py  task-design.md  test_eval_dataset.py  validate.py
eval/core/: archive.json  checkpoint.json  context.json  memory.json  protocol.json  tools.json
eval/judge/: rubric-judge.json
eval/schema/: dataset.schema.json  judge-output.schema.json
eval/workflows/: code.json  state.json  subjective.json
lumo/: agent_loop.py  archive_context.py  background_tasks.py  checkpoint.py  cli.py  config.py  context_manager.py  git_tools.py  legacy_protocol.py  model_protocol.py  prompt_prefix.py  python_environment.py  run_store.py  runtime.py  security.py  session_store.py  skills.py  task_state.py  tool_context.py  tool_executor.py  tool_output.py  tools.py  workspace.py
lumo/evaluation/: evaluator.py  metrics.py
lumo/features/: memory.py
lumo/prompt/: archive_tool_result.md  context_compress.md  request_rewrite.md  shell_repair.md  skill_routing.md
lumo/providers/: __init__.py  clients.py
pico/: agent_loop.py  cli.py  runtime.py  tools.py
pico/features/: memory.py
pico/providers/: clients.py
