[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lumo"
version = "0.1.6"
description = "Small local coding agent for DeepSeek, OpenAI-compatible, Anthropic-compatible, and Ollama models"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27.0",
]

[project.scripts]
lumo = "lumo.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.3.5",
  "ruff>=0.4.4",
]

[tool.setuptools.packages.find]
include = ["lumo*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
